--- a/rtl.css
+++ b/rtl.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: _s
+Theme Name: Shoestrap
 
 Adding support for language written in a Right To Left (RTL) direction is easy -
 it's just a matter of overwriting all the horizontal positioning attributes
@@ -11,7 +11,7 @@ https://codex.wordpress.org/Right_to_Left_Language_Support
 
 /*
 body {
-	direction: rtl;
-	unicode-bidi: embed;
+    direction: rtl;
+    unicode-bidi: embed;
 }
 */
